--- a/filters/tatari/package.json
+++ b/filters/tatari/package.json
@@ -19,16 +19,10 @@
   },
   "homepage": "https://github.com/chrisarevir/component-library#readme",
   "dependencies": {
-    "axios": "^0.15.2",
-    "immutable": "^3.7.5",
+    "axios": "^0.15.3",
+    "qs": "^6.3.1",
     "react": "^0.14.3",
-    "react-dom": "^0.14.3",
-    "react-redux": "^4.0.0",
-    "react-widgets": "^3.4.5",
-    "redux": "^3.5.0",
-    "redux-actions": "^0.8.0",
-    "redux-thunk": "^0.1.0",
-    "reselect": "^2.0.3"
+    "react-dom": "^0.14.3"
   },
   "devDependencies": {
     "autoprefixer-loader": "^3.1.0",
@@ -42,7 +36,6 @@
     "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.21.0",
     "node-sass": "^3.8.0",
-    "redux-logger": "^2.7.4",
     "sass-loader": "^3.0.0",
     "style-loader": "^0.12.4",
     "webpack": "^2.2.1",
