--- a/filters/tatari/package.json
+++ b/filters/tatari/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/chrisarevir/component-library#readme",
   "dependencies": {
     "axios": "^0.15.3",
+    "classnames": "^2.2.5",
     "qs": "^6.3.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3"
